Use arrange act assert pattern in tests